# ghcjs-dev-server

./: .gitignore  ChangeLog.md  README.md  default.nix  ghcjs-dev-server.cabal  ghcjs-dev-server.nix  shell.nix
client/: ghcjs-dev-client.cabal  package.nix
client/src/GHCJSDevServer/: Client.hs
examples/simple/: default.nix  ghcjs-dev-server-examples-simple.cabal  run  simple.cabal
examples/simple/src/: Main.hs  SomeModule.hs
examples/universal/: .ghci  .gitignore  README.md  cabal-ghc.project  default.nix  shell.nix
examples/universal/client/: client.cabal
examples/universal/client/dev/: Main.hs
examples/universal/client/exe/: Main.hs
examples/universal/client/lib/: Client.hs
examples/universal/common/: common.cabal
examples/universal/common/lib/: Common.hs
examples/universal/server/: server.cabal
examples/universal/server/dev/: Main.hs
examples/universal/server/exe/: Main.hs
examples/universal/server/lib/: Server.hs
nix/: nixpkgs-rev.txt  nixpkgs-sha.txt  tools.nix
sample-app/: run
sample-app/src/: Main.hs
server/: .ghci  ghcjs-dev-server.cabal  package.nix
server/exe/: Main.hs
server/lib/: GHCJSDevServer.hs
server/lib/GHCJSDevServer/: Compiler.hs  Logger.hs  Options.hs  Server.hs
server/src/: GHCJSDevServer.hs  Main.hs
server/src/GHCJSDevServer/: Compiler.hs  Logger.hs  Notifier.hs  Options.hs  Server.hs  Watcher.hs
src/: Main.hs
src/GHCJSDevServer/: Compiler.hs  Options.hs  Server.hs
