name:                ghcjs-dev-client
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    GHCJSDevServer.Client
  build-depends:
    base >=4.9 && <4.10,
    aeson,
    ghcjs-base,
    bytestring
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
