name:                ghcjs-dev-server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ghcjs-dev-server
  main-is:
    Main.hs
  build-depends:
    base >=4.9 && <4.10,
    aeson,
    ansi-terminal,
    bytestring,
    directory,
    filepath,
    fsnotify,
    optparse-applicative,
    process,
    stm,
    wai,
    wai-app-static,
    warp,
    websockets
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
