name:                ghcjs-dev-server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ghcjs-dev-server
  main-is:
    Main.hs
  build-depends:
    base >=4.9 && <5,
    aeson,
    ansi-terminal,
    bytestring,
    directory,
    filepath,
    fsnotify,
    http-types,
    optparse-applicative,
    process,
    stm,
    temporary,
    wai,
    wai-middleware-static,
    wai-websockets,
    warp,
    websockets
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    NamedFieldPuns
  other-modules:
    GHCJSDevServer
    GHCJSDevServer.Compiler
    GHCJSDevServer.Logger
    GHCJSDevServer.Notifier
    GHCJSDevServer.Options
    GHCJSDevServer.Server
    GHCJSDevServer.Watcher
  ghc-options:
    -Wall
