cabal-version:       2.2
name:                ghcjs-dev-server
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple

common deps
  build-depends:
    base >=4.9 && <5,
    aeson,
    ansi-terminal,
    bytestring,
    directory,
    filepath,
    fsnotify,
    http-types,
    optparse-applicative,
    process,
    stm,
    temporary,
    wai,
    wai-middleware-static,
    wai-websockets,
    warp,
    websockets

common ghc
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    NamedFieldPuns
  ghc-options:
    -Wall

library
  import: deps
  import: ghc
  hs-source-dirs:
    lib
  exposed-modules:
    GHCJSDevServer
    GHCJSDevServer.Compiler
    GHCJSDevServer.Logger
    GHCJSDevServer.Notifier
    GHCJSDevServer.Options
    GHCJSDevServer.Server
    GHCJSDevServer.Watcher

executable ghcjs-dev-server
  import: deps
  import: ghc
  main-is:
    Main.hs
  hs-source-dirs:
    exe
  build-depends:
    ghcjs-dev-server
